# agent-host-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LAST_SYNCED_COMMIT  Package.swift  README.md  RELEASING.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.github/instructions/: general-instructions.instructions.md
.github/prompts/: update-protocol.prompt.md
.github/workflows/: ci.yml  deploy.yml  format-generated.yml  publish-rust.yml  publish-spec.yml  publish-typescript.yml
clients/go/: CHANGELOG.md  release-metadata.json
clients/kotlin/: AGENTS.md  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  pipeline.yml  release-metadata.json
clients/rust/: CHANGELOG.md  Cargo.toml  MULTI_HOST.md  release-metadata.json
clients/rust/crates/ahp-types/: Cargo.toml  README.md
clients/rust/crates/ahp-types/src/: actions.rs  commands.rs  common.rs  errors.rs  lib.rs  notifications.rs  state.rs  version.rs
clients/rust/crates/ahp-types/tests/: roundtrip_corpus.rs
clients/rust/crates/ahp-ws/: Cargo.toml  README.md
clients/rust/crates/ahp-ws/src/: lib.rs  transport.rs
clients/swift/: AGENTS.md  CHANGELOG.md  release-metadata.json
clients/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  release-metadata.json
docs/: index.md
docs/.changes/: 20260709-changeset-review-capability.json  20260709-changeset-review-client-dispatchable.json  20260709-system-notification-meta-slot.json  20260709-turn-timing.json  20260713-tool-call-judge-confirmation.json  20260713-tool-call-risk-assessment.json  20260714-tool-call-auth-required.json  20260716-live-input-response-parts.json  20260717-go-client-ping.json  20260717-kotlin-command-ping.json  20260717-mcp-oauth-public-client.json  20260717-rust-client-ping.json  20260717-swift-client-ping.json  20260717-swift-command-terminal.json
docs/.vitepress/: config.mts
docs/guide/: actions.md  agents.md  ahp-and-acp.md  architecture.md  changesets.md  clients-multi-host.md  clients.md  communication.md  customizations.md  design.md  doctrine.md  elicitation.md  getting-started.md  hosts.md  implementations.md  mcp.md  reconciliation.md  state-model.md  terminals.md  what-is-ahp.md
docs/reference/: actions.md  commands.md  error-codes.md  messages.md  notifications.md  state-types.md
docs/specification/: authentication.md  chat-channel.md  lifecycle.md  mcp-channel.md  overview.md  root-channel.md  session-channel.md  subscriptions.md  telemetry-channel.md  transport.md  (+1 more)
schema/: actions.schema.json  commands.schema.json  errors.schema.json  notifications.schema.json  state.schema.json
scripts/: change-fragments.test.ts  change-fragments.ts  consume-change-fragments.ts  dev.ts  generate-action-origin.ts  generate-go.ts  generate-json-schema.test.ts  generate-json-schema.ts  generate-kotlin.ts  generate-markdown.ts  generate-rust.ts  generate-swift.ts  generate-typescript.ts  generate.ts  verify-change-fragments.ts
skills/: README.md
types/: action-origin.generated.ts  actions.ts  commands.ts  errors.ts  index.ts  messages.test.ts  messages.ts  notifications.ts  reducers.test.ts  reducers.ts  state.ts  tsconfig.json
(+357 files in other folders)
